part 2 of x - more level -> level() - more damage type things - registry changes - tags / datagen - gui changes